# devin-mcp-proxy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  README.md  dify-integration.md  docker-compose.yml  fix-network-setup.sh  main.py  pyproject.toml  requirements.txt  start-with-dify.sh  troubleshoot.sh  プラン.md  要件.md
scripts/: build.sh  deploy.sh  install_docker.sh
